--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -139,9 +139,9 @@
                                         </div>
                                     </div> -->
                                 <div class="group-info">
-                                    <div class="title-info">
+                                    <!-- <div class="title-info">
                                         <h4>ข้อมูลสถานที่ทำงาน</h4>
-                                    </div>
+                                    </div> -->
                                     <div class="row">
                                         <div class="col-md-3">
                                             <label for="">บริษัท/องค์กร</label>
@@ -198,14 +198,14 @@
                                     </div>
                                 </div>
 
-                                <div class="row">
+                                <!-- <div class="row">
                                     <div class="col-md-12">
                                         <div class="title-info">
                                             <h4>ข้อมูลติดต่อ</h4>
                                         </div>
                                     </div>
 
-                                </div>
+                                </div> -->
                                 <div class="row">
                                     <div class="col-md-3">
                                         <label for="">อีเมล</label>
@@ -256,6 +256,24 @@
 
                         </div>
 
+                        <!-- <div class="userInfo">
+                            <div class="title">
+                                <h4> ข้อมูลสถานที่ทำงาน</h4>
+                            </div>
+                            <div class="user-content info-fontSize">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <label for="">บริษัท/องค์กร</label>
+                                    </div>
+
+                                    <div class="col-md-9">
+                                        {{UserData?.employeeId?.organization}}
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div> -->
+
 
                     </div>
 
@@ -294,19 +312,28 @@
                                 </div>
 
                                 <div class="group-info">
-                                    <div class="title-info">
+                                    <!-- <div class="title-info">
                                         <h4>ข้อมูลสถานที่ทำงาน</h4>
-                                    </div>
-                                    <div class="row">
+                                    </div> -->
+                                    <!-- <div class="row">
                                         <div class="col-md-3">
-                                            <label for="">บริษัท/องค์กร</label>
+                                            <label for="">องค์กร/หน่วยงาน</label>
                                         </div>
                                         <div class="col-md-9">
                                             <input type="text" formControlName="organization" class="form-control"
-                                                placeholder="บริษัท/องค์กร">
+                                                placeholder="องค์กร/หน่วยงาน">
                                         </div>
 
                                     </div>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <label for="">ตำแหน่ง</label>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <input type="text" formControlName="bearing" class="form-control"
+                                                placeholder="ตำแหน่ง">
+                                        </div>
+                                    </div> -->
                                     <div class="row">
                                         <div class="col-md-3">
                                             <label for="">ที่อยู่</label>
