--- a/src/app/view/manageagency/manageagency.component.html
+++ b/src/app/view/manageagency/manageagency.component.html
@@ -2,14 +2,14 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
-      <li class="breadcrumb-item active"><a aria-current="page"> จัดการองค์กร</a></li>
+      <li class="breadcrumb-item active"><a aria-current="page">  จัดการข้อมูลหน่อยงาน</a></li>
     </ol>
   </nav>
   <div class="container-fluid">
     <div class="card">
       <div class="card-header "><!--card-header-danger-->
         <div class="card-title">
-          <a href=""> จัดการข้อมูลหน่อยงาน</a>
+          <a href=""> จัดการข้อมูลหน่วยงาน</a>
 
           <!-- <div class="sub-title">
             แสดงรายชื่อผู้ใช้งาน
@@ -18,7 +18,7 @@
         <!-- <button (click)="openaddagency()" class="btn btn-add">
           เพิ่มข้อมูลองหน่อยงาน</button> -->
         <button (click)="openAddAgencyModal()" class="btn btn-add">
-          เพิ่มผู้ใช้งาน</button>
+          เพิ่มข้อมูลหน่วยงาน</button>
       </div>
       <div class="card-body">
         <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered"
@@ -28,6 +28,7 @@
             <tr>
               <th style="text-align: center; width: 5%;">ลำดับ</th>
               <th style="width: 10%;">ชื่อ</th>
+              <th style="width: 10%;">ที่ตั้งหน่วยงาน</th>
               <th style="width: 10%;">เบอร์โทรศัพท์</th>
               <th style="width: 10%;">อีเมล</th>
               <!-- <th  style="color: black;  font-size: 16px; text-align: center;"><i
@@ -38,6 +39,7 @@
             <tr *ngFor="let agency of agency ; let i = index">
               <td style="text-align: center; width: 5%;">{{ i + 1 }}</td>
               <td> {{ agency.agency_name }} </td>
+              <td> {{ agency.address }} </td>
               <td> {{ agency.phone }} </td>
               <td> {{ agency.email }} </td>
 
@@ -68,63 +70,63 @@
               <form [formGroup]="agenForm" (ngSubmit)="onSubmit(agenForm.value)">
                 <div class="modal-body">
 
-
-
                   <div class="row box">
-                    <div class="row">
-                        <div class="form-group">
-                        <label for="agency_name" style="font-size: 16px;">ชื่อองค์กร</label>
-                        <input type="text" id="agency_name" formControlName="agency_name" required
-                          placeholder="กรอกอีเมลของคุณ">
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="agency_name" style="font-size: 16px;">ชื่อองค์กร/หน่วยงาน</label>
+                        <input type="text" id="agency_name" formControlName="agency_name" required placeholder="กรอกชื่อองค์กร" class="form-control"
+                        [ngClass]="{'box-validate':  agenForm.controls['agency_name'].invalid && (agenForm.controls['agency_name'].touched || agenForm.controls['agency_name'].dirty || Submitted)}">
                         <div
-                          *ngIf="agenForm.get('agency_name')?.invalid && (agenForm.get('agency_name')?.touched || agenForm.get('agency_name')?.dirty)">
-                          <small class="error-text">กรุณากรอกข้อมูล**</small>
+                          *ngIf="agenForm.get('agency_name')?.invalid && (agenForm.get('agency_name')?.touched || agenForm.get('agency_name')?.dirty  || Submitted)">
+                          <small class="error-text">กรุณากรอกข้อมูล*</small>
                         </div>
                       </div>
                     </div>
-                    <div class="row">
-                      <div class="col-sm-6" style="padding-right: 0;">
-                        <div class="form-group">
-                          <label for="email" style="font-size: 16px;">อีเมล</label>
-                          <input type="email" id="email" formControlName="email" required
-                            placeholder="กรอกรหัสผ่านของคุณ">
-                          <div
-                            *ngIf="agenForm.get('email')?.invalid && (agenForm.get('email')?.touched || agenForm.get('email')?.dirty)">
-                            <small class="error-text">กรุณากรอกข้อมูล**</small>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-sm-6" style="padding-right: 0;">
-                        <div class="form-group">
-                          <label for="phone" style="font-size: 16px;">เบอร์โทรศัพท์</label>
-                          <input type="text" id="phone" formControlName="phone" required placeholder="กรอกรหัสผ่านของคุณ">
-                          <div
-                            *ngIf="agenForm.get('phone')?.invalid && (agenForm.get('phone')?.touched || agenForm.get('phone')?.dirty)">
-                            <small class="error-text">กรุณากรอกข้อมูล**</small>
-                          </div>
-                        </div>
-                      </div>
-
-                    </div>
-
-                  
-                   
+                
                   </div>
 
-
                   <div class="row box">
-                    <div class="row">
-                      <div class="col-sm-12" style="padding-right: 0;">
-                        <div class="form-group">
-                          <label for="address" style="font-size: 16px;">ที่ตั้งองค์กร</label>
-                          <input type="text" id="address" formControlName="address" required placeholder="กรอกที่อยู่">
-                          <div
-                            *ngIf="agenForm.get('address')?.invalid && (agenForm.get('address')?.touched || agenForm.get('address')?.dirty)">
-                            <small class="error-text">กรุณากรอกข้อมูล****</small>
-                          </div>
+                    <div class="col-sm-6">
+                      <div class="form-group">
+                        <label for="email" style="font-size: 16px;">อีเมล</label>
+                        <input type="email" id="email" formControlName="email" required placeholder="กรอกอีเมล" class="form-control"
+                        [ngClass]="{'box-validate':  agenForm.controls['email'].invalid && (agenForm.controls['email'].touched || agenForm.controls['email'].dirty || Submitted)}">
+                        <div
+                          *ngIf="agenForm.get('email')?.invalid && (agenForm.get('email')?.touched || agenForm.get('email')?.dirty  || Submitted)">
+                          <small class="error-text">กรุณากรอกข้อมูล*</small>
                         </div>
                       </div>
                     </div>
+
+                    <div class="col-sm-6">
+                      <div class="form-group">
+                        <label for="phone" style="font-size: 16px;">เบอร์โทรศัพท์</label>
+                        <input type="text" id="phone" formControlName="phone" required placeholder="กรอกเบอร์โทรศัทพ์ของคุณ" class="form-control"
+                        [ngClass]="{'box-validate':  agenForm.controls['phone'].invalid && (agenForm.controls['phone'].touched || agenForm.controls['phone'].dirty || Submitted)}">
+                        <div
+                          *ngIf="agenForm.get('phone')?.invalid && (agenForm.get('phone')?.touched || agenForm.get('phone')?.dirty  || Submitted)">
+                          <small class="error-text">กรุณากรอกข้อมูล*</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                <div class="row">
+                  <div class="col-sm-12">
+                    <div class="form-group">
+                      <label for="address" style="font-size: 16px;">ที่ตั้งองค์กร</label>
+                      <input type="text" id="address" formControlName="address" required placeholder="กรอกที่อยู่" class="form-control"
+                      [ngClass]="{'box-validate':  agenForm.controls['address'].invalid && (agenForm.controls['address'].touched || agenForm.controls['address'].dirty || Submitted)}">
+                      <div
+                        *ngIf="agenForm.get('address')?.invalid && (agenForm.get('address')?.touched || agenForm.get('address')?.dirty  || Submitted)">
+                        <small class="error-text">กรุณากรอกข้อมูล*</small>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+
+                   
                     <div class="row">
                  
                     
@@ -180,21 +182,16 @@
                     
 
                     </div>
-                 
-
-
-                  
-                  </div>
-
-
-
-
-
-
-
+                                
 
                 </div>
                 <div class="modal-footer">
+                  <button type="submit" class="btn btn-success"><i
+                    class="fa fa-check"></i>&nbsp;ยืนยัน</button>
+                     <button type="button" class="btn btn-danger" data-dismiss="modal"><i
+                    class="fa fa-times" (click)="closeModal()"></i>
+                      &nbsp; ปิด
+                    </button>
                 </div>
               </form>
             </div>
