--- a/src/app/view/manageuser/manageuser.component.css
+++ b/src/app/view/manageuser/manageuser.component.css
@@ -159,6 +159,9 @@ th, td {
   background-color: #ccc; /* Light gray color for disabled state */
   cursor: not-allowed; /* Show a 'not-allowed' cursor when hovering over the disabled select */
 }
+:host ::ng-deep .form-control{
+  background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
+}
 
 /*invalidate style*/
 .error-text{
@@ -170,6 +173,8 @@ th, td {
       border: 1px solid red;
       border-radius: 5px;
 }
+
+
 
 
 :host ::ng-deep .btn-add{
