--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -333,8 +333,8 @@ justify-content: center;
   background: white;
   padding: 20px;
   border-radius: 8px;
-  width: 510px;
-  height: 650px;
+  width: 610px;
+  /* height: 700px; */
   transform: translateY(-10%); /* เริ่มจากนอกจอด้านบน */
   animation: slideDown 0.5s ease forwards;
 
