--- a/src/app/view/table-main/data-detail/data-detail.component.css
+++ b/src/app/view/table-main/data-detail/data-detail.component.css
@@ -24,7 +24,16 @@
     justify-content: flex-start;
 }
 .form-group input{
+  display: block;
+  width: calc(100% - 0px);
+  padding: 8px 10px;
+  border: 1px solid #ccc;
   border-radius: 5px;
+  font-size: 14px;
+  font-family: 'Sarabun', sans-serif;
+}
+:host ::ng-deep .form-control{
+  background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
 }
 .modal-content{
   
@@ -50,7 +59,7 @@
    z-index: 1;
   
   }
-.box-validate{
+  .form-group input.box-validate{
     border: 1px solid red;
     border-radius: 5px;
   }
