--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -14,6 +14,11 @@ h4{
   margin: 0;
   font-size: 16px;
 
+  
+}
+label{
+  font-size: 16px;
+  font-weight: 650;
 }
 
 
@@ -155,7 +160,8 @@ i{
   font-size: 16px
 }
 label{
-  font-size: 16px
+  font-size: 16px;
+  font-weight: 650;
 }
 .title{
   display: flex;
@@ -225,6 +231,9 @@ label{
   justify-content: center;
   flex-direction: column;
   padding-left: 50px;
+}
+.card-info a{
+ font-size: 16px;
 }
 
 
