--- a/src/app/view/manageagency/addagency/addagency.component.html
+++ b/src/app/view/manageagency/addagency/addagency.component.html
@@ -45,7 +45,7 @@
         <div class="row box">
             <div class="col-sm-12" style="padding-right: 0;">
               <div class="form-group">
-                <label for="address" style="font-size: 16px;">ที่ตั้งองค์กร</label>
+                <label for="address" style="font-size: 16px;">ที่ตั้งหน่วยงาน</label>
                 <input type="text" id="address" formControlName="address" required placeholder="กรอกที่อยู่">
                 <div
                   *ngIf="agenForm.get('address')?.invalid && (agenForm.get('address')?.touched || agenForm.get('address')?.dirty)">
