--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -154,12 +154,15 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-md-3">
-                                            <label for="">บริษัท/องค์กร</label>
+                                            <label for="">ชื่อหน่วยงาน</label>
                                         </div>
 
                                         <div class="col-md-9">
-                                            {{UserData?.employeeId?.organization}}
+                                            {{UserData?.employeeId?.organization}} 
                                         </div>
+                                        <div class="detail-popup" style="display: none; position: absolute; top: 100%; left: 0; background-color: #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.2); padding: 10px; z-index: 100;">
+                                            รายละเอียดอื่นๆ เช่น ที่อยู่บริษัท, โทรศัพท์, อีเมล, ฯลฯ
+                                          </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-3">
@@ -303,11 +306,11 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-md-3">
-                                            <label for="">องค์กร/หน่วยงาน</label>
+                                            <label for="">ชื่อหน่วยงาน</label>
                                         </div>
                                         <div class="col-md-9">
                                             <input type="text" formControlName="organization" class="form-control"
-                                                placeholder="องค์กร/หน่วยงาน">
+                                                placeholder="ชื่อหน่วยงาน">
                                         </div>
 
                                     </div>
@@ -439,7 +442,7 @@
                             </div>
                             <div class="footer-content">
                                 <button type="submit" class="btn btn-success">ยืนยัน</button>
-                                <button type="button" class="btn btn-danger" (click)="cancelEdit()">ยกเลิก</button>
+                                <button type="button" class="btn btn-danger"  (click)="closeModal()">ยกเลิก</button>
                             </div>
                         </form>
 
